@@ -6262,3 +6262,8 @@ PACKAGE: 2.2.99.2
 
 2007-02-19 cjg
  * It is now possible to search for a null date using "","EX"
+
+2007-02-19 cjg
+ * Rewrite now automatically updates static pages where possible. This code
+    has duplicates of stuff in generate_static and isn't smart about the auto
+    javascript and css or themes (yet).
